--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
+  },
+  "scripts": {
+    "start": "node App.js"
   }
 }
